# NeuroAD

./: .conv_prefix.txt  .dockerignore  .env.example  .gcloudignore  .gitignore  BUILD_WITH_CLAUDE.md  BugAuditSkill.md  DatasetConnectionSkill.md  Dockerfile  Dockerfile.backend  Dockerfile.combined  LICENSE  Makefile  NeuroAD_Discovery_Engine_Master.md  README.md  cloudbuild.backend.yaml  cloudbuild.combined.yaml  nginx.conf  pyproject.toml  requirements.txt  run_demo.sh
.githooks/: pre-commit
app/: README.md  __init__.py  build_demo_data.py  claude_science.html  demo_data.json  hypothesis_registry.json  index.html  inject_translation.py  investigate_cache.json  investigate_cache.py  knowledge_base.json  neuroad.html  router_cache.json  server.py  zui.html
audit/: ALIGNED_PLAN.json  ALIGNED_PLAN.md  AUDIT_FINDINGS.md  RETROSPECTIVE.md
data/: registry.yaml
demo-animations/: DESIGN_CONTRACT.md  PIPELINE_FACTS.md  README.md  SUMMARY.md  build_standalone.py  neuroad_demo_animations.html  neuroad_demo_animations_standalone.html
deploy/: start_combined.sh
design/: DANA_CHO_PRINCIPLES.md  POLISH_SPEC.md  WRITEUP.md  (+4 more)
mri_visualizations/backend/: pyproject.toml
mri_visualizations/backend/models/: README.md
mri_visualizations/backend/sfg/: __init__.py  config.py  fixtures.py  flags.py  gallery.py  imaging.py  pipeline.py  registration.py  registry.py  resources.py  server.py  skullstrip.py
mri_visualizations/backend/sfg/checks/: __init__.py  base.py  intensity.py  loader.py  orientation.py  registration.py  skullstrip.py  volume_sanity.py
mri_visualizations/backend/tests/: conftest.py  test_checks.py  test_flags.py  test_registry.py
(+357 files in other folders)
